2007-12-28  Kevin L. Mitchell  <klmitch@mit.edu>

	* ircd/channel.c: add MODE_REGISTERED, mapped to +R; arrange to
	only have it settable or clearable by remote users or /opmode

	* include/supported.h (FEATURESVALUES2): update to include 'R'
	channel mode

	* include/channel.h: add MODE_REGISTERED, update infochanmodes to
	include 'R' channel mode

2007-12-13  Kevin L. Mitchell  <klmitch@mit.edu>

	* ircd/m_gline.c (ms_gline): if we got an activate or deactivate
	for a global G-line we never heard of, and we cannot create it
	because no expire time was sent, manually propagate the G-line
	instead of trying to call gline_add()

	* ircd/gline.c (make_gline): never allow a G-line to be created
	with a 0 expire time

2007-12-03  Michael Poole <mdpoole@troilus.org>

	* include/patchlevel.h (PATCHLEVEL): Bump for u2.10.12.12 release.

2007-12-03  Michael Poole <mdpoole@troilus.org>

	* doc/Makefile.in (DATAROOTDIR): Define.
	(DATADIR): Likewise.
	
2007-11-30  Kevin L. Mitchell  <klmitch@mit.edu>

	* ircd/version.c.SH: correct invalid syntax in shell case/esac

	* ircd/ircd_lexer.l: provide an implementation of yywrap() so we
	no longer have to link against -lfl

	* configure.in: drop tests on LEXLIB and don't add it to the list
	of libs

	* ircd/gline.c (gline_add): apply too-many-users test to realname
	G-lines *only* when the origin is my user (or a user, for
	remote-local G-lines)

2007-11-28  Michael Poole <mdpoole@troilus.org>

	* include/patchlevel.h (PATCHLEVEL): Bump for pre12 development.

2007-11-28  Michael Poole <mdpoole@troilus.org>

	* include/patchlevel.h (PATCHLEVEL): Bump for u2.10.12.11 release.

2007-11-28  Michael Poole <mdpoole@troilus.org>

	* tests/test-driver.pl (drv_default): Fix expect for numeric
	responses that have non-trivial parameters.
	(check_expect): Simplify (and fix) sender name check.

	* tests/bug-1640796.cmd: Update expect NNN for new POE behavior
	and part to not try to part the channel named "leaving".
